templates/all/sf/v57.0/objects/ReactforceSetting__mdt/fields/Banner__c.field-meta.xml
<CustomField>
    <fullName>Banner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banner</label>
    <type>Checkbox</type>
</CustomField>