templates/all/sf/v57.0/objects/ReactforceSetting__mdt/fields/BannerTextColor__c.field-meta.xml
<CustomField>
    <fullName>BannerTextColor__c</fullName>
    <label>Text Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>