templates/all/sf/v57.0/objects/ReactforceSetting__mdt/fields/BannerTimeOff__c.field-meta.xml
<CustomField>
    <fullName>BannerTimeOff__c</fullName>
    <label>Banner Time Off</label>
    <type>DateTime</type>
</CustomField>