templates/all/sf/v57.0/objects/ReactforceSetting__mdt/fields/BannerTimeOn__c.field-meta.xml
<CustomField>
    <fullName>BannerTimeOn__c</fullName>
    <label>Banner Time On</label>
    <type>DateTime</type>
</CustomField>