templates/all/sf/v57.0/objects/ReactforceSetting__mdt/fields/InMaintenance__c.field-meta.xml
<CustomField>
    <fullName>InMaintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Maintenance</label>
    <type>Checkbox</type>
</CustomField>